--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -23,7 +23,8 @@ p {
 a {
   color: rgb(187, 187, 187);
   transition: all 100ms;
-  text-decoration: underline;
+  text-decoration-line: underline;
+  text-decoration-thickness: 1.5px;
 }
 
 p a:nth-of-type(1),
